--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
 <html>
-My name is AKhila and this is my website
+<head>
+  <title>Akhila Ananthram's Personal Website</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/common.css" media="screen">
+  <link rel="stylesheet" href="css/main.css" media="screen">
+</head>
+
+<body>
+<header>
+  <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
+  <h2><a href="./resume.html">Resume</a></h2>
+  <h2><a href="./tv.html">TV Shows</a></h2>
+  <h2><a href="./projects.html">Projects</a></h2>
+</header>
+
+<article>
+    <section id="blurb">
+      <img src="img/head_shot.jpg" height=200 width=200 alt="Profile">
+      <p>Hi! My name is Akhila and I am a Junior studying Computer Science and Mathematics at Cornell University. More specifically, I am interested in computer vision, natural language processing, and artificial intelligence.  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
+    </section>
+</article>
+
+<h2>Contact Me!</h2>
+
+<p><strong>Email:</strong> <a href="mailto:asa225@cornell.edu">asa225@cornell.edu</a></p>
+<p><strong>Phone:</strong> (571)-379-2379</p>
+<a href="https://github.com/akhilaananthram">Github</a>
+
+</body>
 </html>
