took out in line css for img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <article>
     <section id="blurb">
-      <img src="img/head_shot.jpg" height=200 width=200 alt="Profile">
+      <img src="img/head_shot.jpg" alt="Profile">
       <p>Hi! My name is Akhila and I am a Junior studying Computer Science and Mathematics at Cornell University. More specifically, I am interested in computer vision, natural language processing, and artificial intelligence.  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
     </section>
 </article>
