--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <title>Akhila Ananthram's Personal Website</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/common.css" media="screen">
-  <link rel="stylesheet" href="css/main.css" media="screen">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 <header>
-  <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
-  <h2><a href="./resume.html">Resume</a></h2>
-  <h2><a href="./tv.html">TV Shows</a></h2>
-  <h2><a href="./projects.html">Projects</a></h2>
+<h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
+<hr>
+
+  <h2 id="nav"><a href="./resume.html">Resume</a>
+  <a href="./tv.html">TV Shows</a>
+  <a href="./projects.html">Projects</a></h2>
 </header>
 
 <article>
@@ -26,7 +28,7 @@
 
 <p><strong>Email:</strong> <a href="mailto:asa225@cornell.edu">asa225@cornell.edu</a></p>
 <p><strong>Phone:</strong> (571)-379-2379</p>
-<a href="https://github.com/akhilaananthram">Github</a>
+<p><strong>Github: </strong><a href="https://github.com/akhilaananthram">AkhilaAnanthram</a></p>
 
 </body>
 </html>
