I am the best at making websites

--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,23 @@
 <head>
   <title>Akhila Ananthram's Personal Website</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/common.css" media="screen">
+  <link rel="stylesheet" href="css/common.css">
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 <header>
-  <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
-  <h2><a href="./resume.html">Resume</a></h2>
-  <h2><a href="./tv.html">TV Shows</a></h2>
-  <h2><a href="./projects.html">Projects</a></h2>
+<h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
+<hr>
+<ul id="nav">
+  <li><h2><a href="./resume.html">Resume</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
+  <li><h2><a href="./projects.html">Projects</a></h2></li>
+</ul>
 </header>
-
+<div id="contentArea">
 <p>Currently this is empty because I have not decided what I want to put here.  However, I know this is a page that I will want, so I have made a link for it.</p>
-
+</div>
 </body>
 </html>
