--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/main.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 <header>
 <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
 <hr>
-
-  <h2 id="nav"><a href="./resume.html">Resume</a>
-  <a href="./tv.html">TV Shows</a>
-  <a href="./projects.html">Projects</a></h2>
+<ul id="nav">
+  <li><h2><a href="./resume.html">Resume</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
+  <li><h2><a href="./projects.html">Projects</a></h2></li>
+</ul>
 </header>
 
+<div id="main">
 <article>
     <section id="blurb">
       <img src="img/head_shot.jpg" alt="Profile">
@@ -25,11 +28,16 @@
     </section>
 </article>
 
+<div id="contact">
 <h2>Contact Me!</h2>
 
 <p><strong>Email:</strong> <a href="mailto:asa225@cornell.edu">asa225@cornell.edu</a></p>
 <p><strong>Phone:</strong> (571)-379-2379</p>
 <p><strong>Github: </strong><a href="https://github.com/akhilaananthram">AkhilaAnanthram</a></p>
+</div>
+
+
+</div>
 
 </body>
 </html>
