--- a/tv.html
+++ b/tv.html
@@ -3,17 +3,22 @@
 <head>
   <title>Akhila Ananthram's Personal Website</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/common.css" media="screen">
+  <link rel="stylesheet" href="css/common.css">
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 <header>
-  <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
-  <h2><a href="./resume.html">Resume</a></h2>
-  <h2><a href="./tv.html">TV Shows</a></h2>
-  <h2><a href="./projects.html">Projects</a></h2>
+<h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
+<hr>
+<ul id="nav">
+  <li><h2><a href="./resume.html">Resume</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
+  <li><h2><a href="./projects.html">Projects</a></h2></li>
+</ul>
 </header>
-
+<div id="contentArea">
 <h2>Shows I love:</h2>
 <ul>
   <li>Game of Thrones</li>
@@ -23,6 +28,6 @@
   <li>Scrubs</li>
   <li><i>And many more!</i></li>
 </ul>
-
+</div>
 </body>
 </html>
