--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Akhila Ananthram's Personal Website</title>
+  <title>Akhila Ananthram</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/main.css">
@@ -15,28 +15,28 @@
 <hr>
 <ul id="nav">
   <li><h2><a href="./resume.html">Resume</a></h2></li>
-  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
 
-<div id="main">
-<article>
-    <section id="blurb">
-      <img src="img/head_shot.jpg" alt="Profile">
-      <p>Hi! My name is Akhila and I am a Junior studying Computer Science and Mathematics at Cornell University. More specifically, I am interested in computer vision, natural language processing, and artificial intelligence.  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
-    </section>
-</article>
-
-<div id="contact">
-<h2>Contact Me!</h2>
-
-<p><strong>Email:</strong> <a href="mailto:asa225@cornell.edu">asa225@cornell.edu</a></p>
-<p><strong>Phone:</strong> (571)-379-2379</p>
-<p><strong>Github: </strong><a href="https://github.com/akhilaananthram">AkhilaAnanthram</a></p>
+<div id="blurb">
+  <img src="img/head_shot.jpg" alt="Profile">
+  <p>Hi! My name is Akhila and I am a Junior studying <span id="interest">Computer Science</span> and <span id="interest">Mathematics</span> at Cornell University.<br>
+  <br>
+  More specifically, I am interested in <span id="interest">computer vision</span>, <span id="interest">natural language processing</span>, and <span id="interest">artificial intelligence</span>!</br>
+  <br>
+  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
 </div>
 
-
+<div id="contact">
+<ul>
+<li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
+<li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
+<li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="tel:+1-571-379-2379"><img src="img/phone.png" alt="Phone"></a></li>
+</ul>
 </div>
 
 </body>
