--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Akhila Ananthram's Personal Website</title>
+  <title>Akhila Ananthram</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/common.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
@@ -14,12 +14,23 @@
 <hr>
 <ul id="nav">
   <li><h2><a href="./resume.html">Resume</a></h2></li>
-  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
 <div id="contentArea">
-<p>Currently this is empty because I have not decided what I want to put here.  However, I know this is a page that I will want, so I have made a link for it.</p>
+<p>For my Computer Vision class, some cool projects I've done include Image Scissors to semi-automatically cut out something from an image, a feature detector to compare images, a Panorama maker, and a pedestrian detector using Machine Learning.  Message me if you want to hear more about these or other in-class projects!</p><br>
 </div>
+
+<div id="contact">
+<ul>
+<li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
+<li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
+<li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="tel:+1-571-379-2379"><img src="img/phone.png" alt="Phone"></a></li>
+</ul>
+</div>
+
 </body>
 </html>
