--- a/tv.html
+++ b/tv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Akhila Ananthram's Personal Website</title>
+  <title>Akhila Ananthram</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/common.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
@@ -14,8 +14,8 @@
 <hr>
 <ul id="nav">
   <li><h2><a href="./resume.html">Resume</a></h2></li>
-  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
+  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
 <div id="contentArea">
@@ -28,6 +28,17 @@
   <li>Scrubs</li>
   <li><i>And many more!</i></li>
 </ul>
+</div> <br>
+
+<div id="contact">
+<ul>
+<li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
+<li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
+<li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="tel:+1-571-379-2379"><img src="img/phone.png" alt="Phone"></a></li>
+</ul>
 </div>
+
 </body>
 </html>
