--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@
 <h1 id="vanity"><a href="./index.html">Akhila Ananthram</a></h1>
 <hr>
 <ul id="nav">
+  <li><h2><a href="./index.html">About Me</a></h2></li>
   <li><h2><a href="./resume.html">Resume</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
   <li><h2><a href="./tv.html">TV Shows</a></h2></li>
