--- a/tv.html
+++ b/tv.html
@@ -14,7 +14,7 @@
 <hr>
 <ul id="nav">
   <li><h2><a href="./index.html">About Me</a></h2></li>
-  <li><h2><a href="./resume.html">Resume</a></h2></li>
+  <li><h2><a href="./experience.html">Experience</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
   <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
