working on margins

--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
   <title>Akhila Ananthram</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/resume.css">
+  <link rel="stylesheet" href="css/experience.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
 </head>
@@ -27,23 +27,23 @@
   <div id="job1">
   <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
   <h3>Artificial Intelligence Intern at <span id="company">Blackbird Technologies</span></h3>
-  <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines</p>
-  <p>Implemented a spatial pyramid to improve image classification</p>
-  <p>Implemented soft k-means to handle ambiguity between the classes</p>
-  <p>Created an autocropper to crop rotated images</p>
-  <p>Incorported PCA in the pipeline to reduce the dimension of the feature vectors</p>
-  <p>Created a parts of speech tagger to identify the title, using NLTK</p>
-  <p>Modified the hashing function to account for the bias caused by hashing collisions</p>
-  <p>Annotated images</p>
-  <p>Tested the classifiers</p>
+  <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
+  Implemented a spatial pyramid to improve image classification<br>
+  Implemented soft k-means to handle ambiguity between the classes<br>
+  Created an autocropper to crop rotated images<br>
+  Incorported PCA in the pipeline to reduce the dimension of the feature vectors<br>
+  Created a parts of speech tagger to identify the title, using NLTK<br>
+  Modified the hashing function to account for the bias caused by hashing collisions<br>
+  Annotated images<br>
+  Tested the classifiers</p>
   <br>
   </div>
 
   <div id="job2">
   <img src="img/cornell.gif" alt="Cornell">
   <h3>Course Assistant for Calculus</h3>
-  <p>Graded homework</p>
-  <p>Held study sessions and helped students with their class work</p>
+  <p>Graded homework<br>
+  Held study sessions and helped students with their class work</p>
   <br>
   </div>
 
@@ -57,12 +57,12 @@
   <div id="job2">
   <img src="img/anthrotronix.jpg" alt="Anthrotronix">
   <h3>Software Engineering Intern at <span id="company">Anthrotronix, Inc</span></h3>
-  <p>Software testing</p>
-  <p>Researched and did basic Android programming</p>
-  <p>Worked with Matlab for data analysis</p>
-  <p>Used Python and OpenCV for object detection</p>
-  <p>Made a game called Tap Tap Rehabilitation for a Maker's Fair</p>
-  <p>Made a version of Tetris using Processing for the Makey Makey</p>
+  <p>Software testing<br>
+  Researched and did basic Android programming<br>
+  Worked with Matlab for data analysis<br>
+  Used Python and OpenCV for object detection<br>
+  Made a game called Tap Tap Rehabilitation for a Maker's Fair<br>
+  Made a version of Tetris using Processing for the Makey Makey</p>
   <br>
   </div>
 
@@ -108,7 +108,6 @@
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
 <li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
-<li><a href="tel:+1-571-379-2379"><img src="img/phone.png" alt="Phone"></a></li>
 </ul>
 </div>
 
