--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,9 @@
 
   <div id="job1">
   <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
-  <h3>Artificial Intelligence Intern at <span id="company">Blackbird Technologies</span></h3>
+  <h3 id="company">Blackbird Technologies</h3>
+  <h4 id="position">Artificial Intelligence Intern</h4>
+  <h4 id="time">Summer 2014</h4>
   <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
   Implemented a spatial pyramid to improve image classification<br>
   Implemented soft k-means to handle ambiguity between the classes<br>
@@ -41,7 +43,9 @@
 
   <div id="job2">
   <img src="img/cornell.gif" alt="Cornell">
-  <h3>Course Assistant for Calculus</h3>
+  <h3 id="company">Cornell University</h3>
+  <h4 id="position">Calculus Course Assistant</h4>
+  <h4 id="time">Fall 2013</h4>
   <p>Graded homework<br>
   Held study sessions and helped students with their class work</p>
   <br>
@@ -49,14 +53,18 @@
 
   <div id="job1">
   <img src="img/awp.png" alt="AWP">
-  <h3>iOS Programming Intern at <span id="company">Ancient Wisdom Productions</span></h3>
+  <h3 id="company">Ancient Wisdom Productions</h3>
+  <h4 id="position">iOS Programming Intern</h4>
+  <h4 id="time">FILL IN</h4>
   <p>Added new features to a prexisting application, <a href="http://pictionapp.com">Piction</a></p>
   <br>
   </div>
 
   <div id="job2">
   <img src="img/anthrotronix.jpg" alt="Anthrotronix">
-  <h3>Software Engineering Intern at <span id="company">Anthrotronix, Inc</span></h3>
+  <h3 id="company">Anthrotronix, Inc</h3>
+  <h4 id="position">Software Engineering Intern</h4>
+  <h4 id="time">FILL IN</h4>
   <p>Software testing<br>
   Researched and did basic Android programming<br>
   Worked with Matlab for data analysis<br>
@@ -70,7 +78,7 @@
   <h3><strong>Computer Science Courses</strong></h3>
   <p><span id="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML & CSS)</p>
   <p><span id="courseID">CS 4300</span> - Information Retrieval</p>
-  <p><span id="courseID">CS 4410</span> - Operating Systems</p>
+  <p><span id="courseID">CS 4410</span> - Operating Systems (Python)</p>
   <p><span id="courseID">CS 4780</span> - Machine Learning (Python)</p>
   <p><span id="courseID">CS 4701</span> - Practicum in Artificial Intelligence</p>
   <p><span id="courseID">CS 4700</span> - Foundations of Artificial Intelligence</p>
