--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
 <div id="blurb">
   <img src="img/head_shot.jpg" alt="Profile">
-  <p>Hi! My name is Akhila and I am a Junior studying <span id="interest">Computer Science</span> and <span id="interest">Mathematics</span> at Cornell University.<br>
-  <br>
-  More specifically, I am interested in <span id="interest">computer vision</span>, <span id="interest">natural language processing</span>, and <span id="interest">artificial intelligence</span>!</br>
+  <p>Hi! My name is Akhila and I am a Junior studying <span id="interest">Computer Science</span> and <span id="interest">Mathematics</span> at Cornell University. More specifically, I am interested in <span id="interest">computer vision</span>, <span id="interest">natural language processing</span>, and <span id="interest">artificial intelligence</span>!</br>
   <br>
   Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
 </div>
