--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
   <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
   <h3 id="company">Blackbird Technologies</h3>
   <h4 id="position">Artificial Intelligence Intern</h4>
-  <h4 id="time">Summer 2014</h4>
+  <h4 id="time">May 2014 – August 2014</h4>
   <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
   Implemented a spatial pyramid to improve image classification<br>
   Implemented soft k-means to handle ambiguity between the classes<br>
@@ -45,7 +45,7 @@
   <img src="img/cornell.gif" alt="Cornell">
   <h3 id="company">Cornell University</h3>
   <h4 id="position">Calculus Course Assistant</h4>
-  <h4 id="time">Fall 2013</h4>
+  <h4 id="time">August 2013 – December 2013</h4>
   <p>Graded homework<br>
   Held study sessions and helped students with their class work</p>
   <br>
@@ -55,7 +55,7 @@
   <img src="img/awp.png" alt="AWP">
   <h3 id="company">Ancient Wisdom Productions</h3>
   <h4 id="position">iOS Programming Intern</h4>
-  <h4 id="time">FILL IN</h4>
+  <h4 id="time">April 2013 – December 2013</h4>
   <p>Added new features to a prexisting application, <a href="http://pictionapp.com">Piction</a></p>
   <br>
   </div>
@@ -64,7 +64,7 @@
   <img src="img/anthrotronix.jpg" alt="Anthrotronix">
   <h3 id="company">Anthrotronix, Inc</h3>
   <h4 id="position">Software Engineering Intern</h4>
-  <h4 id="time">FILL IN</h4>
+  <h4 id="time">May 2013 – August 2013</h4>
   <p>Software testing<br>
   Researched and did basic Android programming<br>
   Worked with Matlab for data analysis<br>
