changed id to class

--- a/experience.html
+++ b/experience.html
@@ -75,8 +75,8 @@
   </div>
 
   <h2 id="category">Relevant Coursework</h2>
-  <h3><strong>Computer Science Courses</strong></h3>
-  <p><span id="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML & CSS)</p>
+  <h3 id="subject">Computer Science Courses</h3>
+  <p><span id="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
   <p><span id="courseID">CS 4300</span> - Information Retrieval</p>
   <p><span id="courseID">CS 4410</span> - Operating Systems (Python)</p>
   <p><span id="courseID">CS 4780</span> - Machine Learning (Python)</p>
@@ -94,7 +94,7 @@
   <p>In high school, I took AP Computer Science (Java)</p>
   <br>
 
-  <h3><strong>Math Courses</strong></h3>
+  <h3 id="subject">Math Courses</h3>
   <p><span id="courseID">CS 4850</span> - Mathematical Foundations for the Information Age</p>
   <p><span id="courseID">MATH 3360</span> - Applicable Algebra</p>
   <p><span id="courseID">MATH 4130</span> - Honors Introduction to Analysis I</p>
@@ -104,9 +104,9 @@
   <p>In high school, I took AP Calculus BC and Multivariable calculus</p>
   <br>
 
-  <h3><strong>Linguistics Courses</strong></h3>
+  <h3 id="subject">Linguistics Courses</h3>
   <p><span id="courseID">LING 1101</span> - Introduction to Linguistics</p>
-  <p><span id="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab & Python)</p>
+  <p><span id="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
   <br>
 </div>
 
@@ -115,7 +115,7 @@
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
-<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
 </ul>
 </div>
 
