--- a/tv.html
+++ b/tv.html
@@ -36,7 +36,7 @@
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
-<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
 </ul>
 </div>
 
