--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div id="blurb">
   <img src="img/head_shot.jpg" alt="Profile">
-  <p>Hi! My name is Akhila and I am a Junior studying <span id="interest">Computer Science</span> and <span id="interest">Mathematics</span> at Cornell University. More specifically, I am interested in <span id="interest">computer vision</span>, <span id="interest">natural language processing</span>, and <span id="interest">artificial intelligence</span>!</br>
+  <p>Hi! My name is Akhila and I am a Junior studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span> at Cornell University. More specifically, I am interested in <span class="interest">computer vision</span>, <span id="interest">natural language processing</span>, and <span class="interest">artificial intelligence</span>!<br>
   <br>
   Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
 </div>
@@ -33,7 +33,7 @@
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
-<li><a href="files/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
+<li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
 </ul>
 </div>
 
