--- a/projects.html
+++ b/projects.html
@@ -19,18 +19,18 @@
   <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
-<div id="contentArea">
+<div class="contentArea">
 <p>For my Computer Vision class, some cool projects I've done include Image Scissors to semi-automatically cut out something from an image, a feature detector to compare images, a Panorama maker, and a pedestrian detector using Machine Learning.  Message me if you want to hear more about these or other in-class projects!</p><br>
 </div>
 
-<div id="contact">
+<footer class="contact">
 <ul>
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
 <li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
 </ul>
-</div>
+</footer>
 
 </body>
 </html>
