--- a/tv.html
+++ b/tv.html
@@ -19,7 +19,7 @@
   <li><h2><a href="./tv.html" class="selected">TV Shows</a></h2></li>
 </ul>
 </header>
-<div id="contentArea">
+<div class="contentArea">
 <h2>Shows I love:</h2>
 <ul>
   <li>Game of Thrones</li>
@@ -31,7 +31,7 @@
 </ul>
 </div> <br>
 
-<div id="contact">
+<div class="contact">
 <ul>
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
