--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
   <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
-<div id="contentArea">
+<div class="contentArea">
 
   <h2 class="category">Professional Experience</h2>
 
@@ -73,6 +73,8 @@
   Made a version of Tetris using Processing for the Makey Makey</p>
   <br>
   </div>
+
+  <hr class="divider">
 
   <h2 class="category">Relevant Coursework</h2>
   <h3 class="subject">Computer Science Courses</h3>
@@ -133,14 +135,14 @@
   <br>
 </div>
 
-<div id="contact">
+<footer class="contact">
 <ul>
 <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
 <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
 <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
 <li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
 </ul>
-</div>
+</footer>
 
 </body>
 </html>
