changed section to div

--- a/experience.html
+++ b/experience.html
@@ -24,7 +24,7 @@
 
   <h2 class="category">Professional Experience</h2>
 
-  <section class="job1">
+  <div class="job1">
   <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
   <h3 class="company">Blackbird Technologies</h3>
   <h4 class="position">Artificial Intelligence Intern</h4>
@@ -39,7 +39,7 @@
   Annotated images<br>
   Tested the classifiers</p>
   <br>
-  </section>
+  </div>
 
   <div class="job2">
   <img src="img/cornell.gif" alt="Cornell">
